--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@
 
 /* Common styles */
 body {
-  color: var(--main-color);
+  color: var(--post-info-color);
   font-family: "Roboto", sans-serif;
+  background-color: var(--light-color);
 }
 
 a {
@@ -66,6 +67,7 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-brand);
+  text-decoration: none;
 }
 .logo {
   font-family: "Raleway";
@@ -76,9 +78,10 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-color);
+  text-decoration: none
 }
 
-.header-list {
+.header-list {list-style: none;
 }
 .header-item {
 }
@@ -95,9 +98,9 @@ p {
   color: var(--action-color);
 }
 
-.header-info {
+.header-info {font-style: normal;
 }
-.header-info-list {
+.header-info-list { list-style: none;
 }
 
 .header-info-item {
@@ -144,8 +147,17 @@ p {
   background: var(--action-color);
 }
 
+/* Benefits section styles */
+.benefits-list {}
+
 /* Section team styles */
 
+.section-team {
+  background-color: var(--footer-text);
+}
+.team-list {
+  
+}
 /* Footer styles */
 
 .footer {
