--- a/goit-markup-hw-02/goit-markup-hw-02/css/styles.css
+++ b/goit-markup-hw-02/goit-markup-hw-02/css/styles.css
@@ -9,9 +9,8 @@
 
 /* Common styles */
 body {
-  color: var(--post-info-color);
+  color: var(--main-color);
   font-family: "Roboto", sans-serif;
-  background-color: var(--light-color);
 }
 
 a {
@@ -67,7 +66,6 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-brand);
-  text-decoration: none;
 }
 .logo {
   font-family: "Raleway";
@@ -78,10 +76,9 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-color);
-  text-decoration: none
 }
 
-.header-list {list-style: none;
+.header-list {
 }
 .header-item {
 }
@@ -98,9 +95,9 @@ p {
   color: var(--action-color);
 }
 
-.header-info {font-style: normal;
+.header-info {
 }
-.header-info-list { list-style: none;
+.header-info-list {
 }
 
 .header-info-item {
@@ -147,17 +144,8 @@ p {
   background: var(--action-color);
 }
 
-/* Benefits section styles */
-.benefits-list {}
-
 /* Section team styles */
 
-.section-team {
-  background-color: var(--footer-text);
-}
-.team-list {
-  
-}
 /* Footer styles */
 
 .footer {
