--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ p {
 
 /* Section team styles */
 
-.section-team {background-color: var(--footer-text);
+.section-team {background: var(--footer-text);
 }
 
 .team-list {
