--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ ol {
   list-style: none;
 }
 
-h2 {
+.section-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -38,14 +38,14 @@ h2 {
   color: var(--main-color);
 }
 
-h3 {
+.title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-color);
 }
-p {
+.text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -142,6 +142,7 @@ p {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--light-color);
+  
 }
 .hero-btn:hover,
 .hero-btn:focus {
