--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,7 @@ button {
   cursor: pointer;
 }
 
-ul,
-ol {
+.list {
   list-style: none;
 }
 
@@ -56,8 +55,11 @@ ol {
 
 .header {
 }
-.header-nav {
+.header nav {
 }
+
+.link {text-decoration: none;}
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -81,10 +83,10 @@ ol {
   text-decoration: none;
 }
 
-.header-list {
+.header list {
   list-style: none;
 }
-.header-item {
+.header item {list-style: none;
 }
 .header-link {
   font-weight: 500;
@@ -102,7 +104,7 @@ ol {
 .header-info {
   font-style: normal;
 }
-.header-info-list {
+.header-info list {
   list-style: none;
 }
 
@@ -151,7 +153,12 @@ ol {
 }
 
 /* Benefits section styles */
-.benefits-list {
+
+.benefits list { list-style: none;
+}
+
+.benefits-item {
+
 }
 
 /* Section team styles */
@@ -160,8 +167,14 @@ ol {
   background: var(--footer-text);
 }
 
-.team-list {
+.team list {list-style: none;
+
 }
+
+.team-item {background-color: var(--light-color);
+}
+
+
 /* Footer styles */
 
 .footer {
@@ -185,6 +198,6 @@ ol {
 
 /* Portfolio */
 
-.portfolio-link {
+.portfolio link {
   text-decoration: none;
 }
