--- a/goit-markup-hw-02/css/styles.css
+++ b/goit-markup-hw-02/css/styles.css
@@ -23,12 +23,11 @@ button {
   cursor: pointer;
 }
 
-ul,
-ol {
+.list {
   list-style: none;
 }
 
-h2 {
+.section-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -38,14 +37,14 @@ h2 {
   color: var(--main-color);
 }
 
-h3 {
+.title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-color);
 }
-p {
+.text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -56,8 +55,11 @@ p {
 
 .header {
 }
-.header-nav {
+.header nav {
 }
+
+.link {text-decoration: none;}
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -78,12 +80,13 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-color);
-  text-decoration: none
+  text-decoration: none;
 }
 
-.header-list {list-style: none;
+.header list {
+  list-style: none;
 }
-.header-item {
+.header item {list-style: none;
 }
 .header-link {
   font-weight: 500;
@@ -98,9 +101,11 @@ p {
   color: var(--action-color);
 }
 
-.header-info {font-style: normal;
+.header-info {
+  font-style: normal;
 }
-.header-info-list { list-style: none;
+.header-info list {
+  list-style: none;
 }
 
 .header-info-item {
@@ -135,12 +140,12 @@ p {
   color: var(--light-color);
 }
 .hero-btn {
+  color: var(--light-color);
   background-color: var(--primary-brand);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: var(--light-color);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -148,16 +153,29 @@ p {
 }
 
 /* Benefits section styles */
-.benefits-list {}
+
+.benefits list { list-style: none;
+}
+
+.benefits-item {
+
+}
 
 /* Section team styles */
 
 .section-team {
-  background-color: var(--footer-text);
+  background: var(--footer-text);
 }
-.team-list {
+
+.team list {list-style: none;
+
+}
+
+.team-item {background-color: var(--light-color);
   
 }
+
+
 /* Footer styles */
 
 .footer {
@@ -177,4 +195,10 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--footer-text);
+}
+
+/* Portfolio */
+
+.portfolio link {
+  text-decoration: none;
 }
