--- a/css/styles.css
+++ b/css/styles.css
@@ -86,8 +86,11 @@ button {
 .header list {
   list-style: none;
 }
-.header item {list-style: none;
+.header item {list-style: none; text-decoration:none;
 }
+
+.hero {text-decoration:none}
+
 .header-link {
   font-weight: 500;
   font-size: 16px;
