--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,10 @@ button {
 .portfoli-btn {
   color: var(--primary-brand);
   background-color: var(--footer-text);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 }
 
 .portfoli-btn:focus,
