--- a/goit-markup-hw-02/css/styles.css
+++ b/goit-markup-hw-02/css/styles.css
@@ -58,7 +58,9 @@ button {
 .header nav {
 }
 
-.link {text-decoration: none;}
+.link {
+  text-decoration: none;
+}
 
 .header-logo {
   font-family: "Raleway", sans-serif;
@@ -86,8 +88,15 @@ button {
 .header list {
   list-style: none;
 }
-.header item {list-style: none;
+.header item {
+  list-style: none;
+  text-decoration: none;
 }
+
+.hero {
+  text-decoration: none;
+}
+
 .header-link {
   font-weight: 500;
   font-size: 16px;
@@ -154,27 +163,25 @@ button {
 
 /* Benefits section styles */
 
-.benefits list { list-style: none;
+.benefits list {
+  list-style: none;
 }
 
 .benefits-item {
-
 }
 
 /* Section team styles */
 
+.team-item {
+  background-color: var(--light-color);
+}
 .section-team {
   background: var(--footer-text);
 }
 
-.team list {list-style: none;
-
+.team list {
+  list-style: none;
 }
-
-.team-item {background-color: var(--light-color);
-  
-}
-
 
 /* Footer styles */
 
@@ -201,4 +208,18 @@ button {
 
 .portfolio link {
   text-decoration: none;
+}
+.btn-portfolio {
+  color: var(--primary-brand);
+  background-color: var(--footer-text);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.btn-portfolio:focus,
+.btn-portfolio:hover {
+  color: var(--light-color);
+  background-color: var(--action-color);
 }
