--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ button {
 }
 
 .list {
-  list-style: none;
+  list-style-type: none;
 }
 
 .section-title {
@@ -74,15 +74,7 @@ button {
   text-decoration: none;
 }
 .logo {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: var(--main-color);
-  text-decoration: none;
 }
 
 .header list {
@@ -189,18 +181,14 @@ button {
   background-color: var(--main-color);
 }
 
+.logo-ftr {
+  color: var(--footer-text);
+}
+
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--footer-text);
-}
-.logo-ftr {
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: var(--footer-text);
 }
 
