--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,45 @@
   --footer-text: #f4f4fd;
 }
 
-/* Common styles */
+/* Reset */
+.container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+  
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   color: var(--post-info-color);
   font-family: "Roboto", sans-serif;
   background-color: var(--light-color);
+  flex-shrink: 0;
 }
 
 a {
@@ -21,10 +55,16 @@ a {
 button {
   font-family: inherit;
   cursor: pointer;
+  border-radius: 4px;
 }
 
 .list {
   list-style-type: none;
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .section-title {
@@ -51,11 +91,35 @@ button {
   color: var(--post-info-color);
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* Header styles */
 
-.header {
+.brd {
+  border-bottom: 1px solid #e7e9fc;
 }
+
+.container-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .header nav {
+  display: flex;
+  align-items: center;
 }
 
 .link {
@@ -72,15 +136,20 @@ button {
   text-transform: uppercase;
   color: var(--primary-brand);
   text-decoration: none;
+  padding: 24px 0;
+  margin-right: 76px;
 }
 .logo {
   color: var(--main-color);
 }
 
-.header list {
+.header-list {
   list-style: none;
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
 }
-.header item {
+.header-item {
   list-style: none;
   text-decoration: none;
 }
@@ -95,6 +164,8 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-color);
+  display: block;
+  padding: 24px 0;
 }
 
 .header-link:focus,
@@ -104,6 +175,9 @@ button {
 
 .header-info {
   font-style: normal;
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 .header-info list {
   list-style: none;
@@ -117,6 +191,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--post-info-color);
+  padding: 24px 0;
 }
 
 .header-info-link:focus,
@@ -130,6 +205,8 @@ button {
 }
 .section-hero {
   background-color: var(--main-color);
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero-title {
@@ -139,6 +216,8 @@ button {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--light-color);
+  max-width: 496px;
+  margin: 0 auto 48px;
 }
 .hero-btn {
   color: var(--light-color);
@@ -147,6 +226,11 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  min-width: 169px;
+  border: none;
+  padding: 16px 32px;
+  display: block;
+  margin: 0 auto;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -154,31 +238,76 @@ button {
 }
 
 /* Benefits section styles */
+.section.benefits {
+  padding-bottom: 0;
+}
 
-.benefits list {
-  list-style: none;
+.benefits-list {
+  display: flex;
+
+  gap: 24px;
 }
 
 .benefits-item {
+  width: calc((100% - 72px) / 4);
+}
+
+/* Section doing */
+
+.doing-title {
+  margin-bottom: 72px;
+}
+
+.section-doing {
+  list-style-type: none;
+  display: flex;
+  gap: 24px;
+}
+.doing-img {
+  width: calc((100% - 48px) / 3);
 }
 
 /* Section team styles */
 
 .team-item {
   background-color: var(--light-color);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 .section-team {
   background: var(--footer-text);
+  padding-top: 0;
 }
 
-.team list {
+.team-list {
   list-style: none;
+  display: flex;
+  gap: 24px;
+}
+
+.title-team {
+  padding: 120px 0 72px;
+}
+
+.team-text-info {
+  padding: 32px 16px;
+  text-align: center;
+}
+
+.title-persn {
+
+  margin-bottom: 8px;
 }
 
 /* Footer styles */
 
 .footer {
   background-color: var(--main-color);
+  padding-top: 101.5px;
+  padding-bottom: 100px;
 }
 
 .logo-ftr {
@@ -190,6 +319,14 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--footer-text);
+  max-width: 264px;
+}
+.ftr-logo {
+  display: block;
+  margin-bottom: 16px;
+  padding: 0;
+  
+
 }
 
 /* Portfolio */
@@ -197,6 +334,28 @@ button {
 .portfolio link {
   text-decoration: none;
 }
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
+  padding-bottom: 120px;
+  flex-direction: row-reverse;
+  
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+  flex-shrink: 0;
+}
+
+.portfolio-btn {
+  margin: 96px 0 72px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
 .btn-portfolio {
   color: var(--primary-brand);
   background-color: var(--footer-text);
@@ -204,10 +363,23 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  border: 1px solid #e7e9fc;
+  padding: 12px 24px;
 }
 
 .btn-portfolio:focus,
 .btn-portfolio:hover {
   color: var(--light-color);
   background-color: var(--action-color);
+}
+
+.portf-img-info {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 32px 16px;
+  
+}
+
+.portf-title {
+  margin-bottom: 8px;
 }
