--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ button {
   row-gap: 48px;
   column-gap: 24px;
   padding-bottom: 120px;
-  flex-direction: row-reverse;
+  */
   
 }
 .portfolio-item {
