--- a/css/styles.css
+++ b/css/styles.css
@@ -238,9 +238,12 @@ button {
 }
 
 /* Benefits section styles */
-.section.benefits {
-  padding-bottom: 0;
+
+.bnfts-title {
+
+  margin-bottom: 8px;
 }
+
 
 .benefits-list {
   display: flex;
@@ -253,6 +256,11 @@ button {
 }
 
 /* Section doing */
+
+.doing {
+  padding-top: 0;
+}
+
 
 .doing-title {
   margin-bottom: 72px;
@@ -279,7 +287,7 @@ button {
 }
 .section-team {
   background: var(--footer-text);
-  padding-top: 0;
+  padding: 120px 0 120px;
 }
 
 .team-list {
@@ -289,7 +297,7 @@ button {
 }
 
 .title-team {
-  padding: 120px 0 72px;
+  margin-bottom: 72px;
 }
 
 .team-text-info {
@@ -306,8 +314,8 @@ button {
 
 .footer {
   background-color: var(--main-color);
-  padding-top: 101.5px;
-  padding-bottom: 100px;
+  padding: 100px 0;
+
 }
 
 .logo-ftr {
@@ -322,14 +330,20 @@ button {
   max-width: 264px;
 }
 .ftr-logo {
-  display: block;
+  display: inline-block;
   margin-bottom: 16px;
   padding: 0;
+  
   
 
 }
 
 /* Portfolio */
+
+.section-portfolio {
+
+  padding-top: 96px; padding-bottom: 120px;
+}
 
 .portfolio link {
   text-decoration: none;
@@ -340,8 +354,8 @@ button {
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
-  padding-bottom: 120px;
-  */
+  
+  
   
 }
 .portfolio-item {
@@ -350,10 +364,11 @@ button {
 }
 
 .portfolio-btn {
-  margin: 96px 0 72px;
+  
   display: flex;
   justify-content: center;
   gap: 24px;
+  margin-bottom: 72px;
 }
 
 .btn-portfolio {
@@ -371,6 +386,9 @@ button {
 .btn-portfolio:hover {
   color: var(--light-color);
   background-color: var(--action-color);
+  border: 1px solid transparent;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
+
 }
 
 .portf-img-info {
