--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,8 @@ button {
   color: var(--action-color);
 }
 
+
+
 .header-info {
   font-style: normal;
   display: flex;
@@ -201,12 +203,21 @@ button {
 
 /* Hero section styles */
 
-.main {
+.hero-container {
+
+
 }
+
 .section-hero {
   background-color: var(--main-color);
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1440px 600px;
+  
+
 }
 
 .hero-title {
