--- a/css/styles.css
+++ b/css/styles.css
@@ -356,8 +356,9 @@ button {
   padding-top: 96px; padding-bottom: 120px;
 }
 
-.portfolio link {
-  text-decoration: none;
+.portfolio-link {
+
+ 
 }
 
 .portfolio-list {
@@ -372,7 +373,41 @@ button {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   flex-shrink: 0;
+
 }
+
+.portfolio-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+}
+
+/* Overlayyyy */
+/* 00000000000 */
+/* {position: relative;
+  overflow: hidden;
+  
+}
+
+
+.overlay {
+
+  padding: 8px;
+  background-color: var(--primary-brand);
+  color: var(--footer-text);
+  font-family: sans-serif;
+    position: absolute;
+    top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: translateY(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+
+:hover .overlay {transform: translateY(0);} */
+/* 000000000000000000 */
 
 .portfolio-btn {
   
