--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@
   max-width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
-  
 }
 
 h1,
@@ -166,14 +165,25 @@ button {
   color: var(--main-color);
   display: block;
   padding: 24px 0;
+  position: relative;
+}
+
+.header-link.active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: var(--action-color);
+  position: absolute;
+  bottom: 20px;
+  left: 0;
 }
 
 .header-link:focus,
 .header-link:hover {
   color: var(--action-color);
 }
-
-
 
 .header-info {
   font-style: normal;
@@ -204,20 +214,21 @@ button {
 /* Hero section styles */
 
 .hero-container {
-
-
 }
 
 .section-hero {
   background-color: var(--main-color);
   padding-top: 188px;
   padding-bottom: 188px;
-  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/people-office.jpg);
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1440px 600px;
-  
-
 }
 
 .hero-title {
@@ -250,15 +261,24 @@ button {
 
 /* Benefits section styles */
 
-.bnfts-title {
+.benefits-icon {
+  margin: 24px 100px;
+}
 
+.bnfts-bg-color {
+  width: 264px;
+  height: 112px;
+  background-color: var(--footer-text);
+  border-radius: 4px;
   margin-bottom: 8px;
 }
 
+.bnfts-title {
+  margin-bottom: 8px;
+}
 
 .benefits-list {
   display: flex;
-
   gap: 24px;
 }
 
@@ -271,7 +291,6 @@ button {
 .doing {
   padding-top: 0;
 }
-
 
 .doing-title {
   margin-bottom: 72px;
@@ -312,13 +331,89 @@ button {
 }
 
 .team-text-info {
-  padding: 32px 16px;
+  padding: 32px 16px 8px;
   text-align: center;
 }
 
 .title-persn {
-
   margin-bottom: 8px;
+}
+
+.network-team-icon {
+  margin-bottom: 32px ;
+
+
+}
+
+.network-team {
+  list-style: none;
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+
+  
+}
+
+.network-item {
+  width: 40px;
+  height: 40px;
+}
+
+.network-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-brand);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.network-link:hover,
+.network-link:focus {
+
+background-color: #31D0AA;
+}
+  
+
+
+/* Clients section styles */
+
+.customers-title {
+  text-align: center;
+  margin-bottom: 72px;
+}
+
+.customers-container {
+}
+
+.clients-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.clients-item {
+  list-style-type: none;
+}
+
+.clients-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 168px;
+  height: 88px;
+
+  border-radius: 4px;
+  border: 1px solid var(--lightslate, #8e8f99);
+}
+
+.clients-link:hover {
+  border-color: var(--action-color);
+}
+
+.clients-link:hover .clients-icon {
+  fill: var(--action-color);
 }
 
 /* Footer styles */
@@ -326,7 +421,6 @@ button {
 .footer {
   background-color: var(--main-color);
   padding: 100px 0;
-
 }
 
 .logo-ftr {
@@ -344,21 +438,18 @@ button {
   display: inline-block;
   margin-bottom: 16px;
   padding: 0;
-  
-  
-
 }
+
+
 
 /* Portfolio */
 
 .section-portfolio {
-
-  padding-top: 96px; padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 120px;
 }
 
 .portfolio-link {
-
- 
 }
 
 .portfolio-list {
@@ -366,19 +457,16 @@ button {
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
-  
-  
-  
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   flex-shrink: 0;
-
 }
 
 .portfolio-item:hover {
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 /* Overlayyyy */
@@ -410,7 +498,6 @@ button {
 /* 000000000000000000 */
 
 .portfolio-btn {
-  
   display: flex;
   justify-content: center;
   gap: 24px;
@@ -433,15 +520,14 @@ button {
   color: var(--light-color);
   background-color: var(--action-color);
   border: 1px solid transparent;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
-
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
 .portf-img-info {
   border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 16px;
-  
 }
 
 .portf-title {
