--- a/css/styles.css
+++ b/css/styles.css
@@ -49,12 +49,20 @@ body {
 
 a {
   text-decoration: none;
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 button {
   font-family: inherit;
   cursor: pointer;
   border-radius: 4px;
+
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .list {
@@ -176,8 +184,11 @@ button {
   border-radius: 2px;
   background: var(--action-color);
   position: absolute;
-  bottom: 20px;
+  bottom: -1px;
   left: 0;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:focus,
@@ -204,6 +215,9 @@ button {
   letter-spacing: 0.02em;
   color: var(--post-info-color);
   padding: 24px 0;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-info-link:focus,
@@ -253,10 +267,13 @@ button {
   padding: 16px 32px;
   display: block;
   margin: 0 auto;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus {
-  background: var(--action-color);
+  background-color: var(--action-color);
 }
 
 /* Benefits section styles */
@@ -367,6 +384,9 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .network-link:hover,
@@ -406,6 +426,9 @@ background-color: #31D0AA;
 
   border-radius: 4px;
   border: 1px solid var(--lightslate, #8e8f99);
+  transition-property: border-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover {
@@ -449,8 +472,7 @@ background-color: #31D0AA;
   padding-bottom: 120px;
 }
 
-.portfolio-link {
-}
+
 
 .portfolio-list {
   display: flex;
@@ -461,6 +483,9 @@ background-color: #31D0AA;
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   flex-shrink: 0;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
@@ -471,21 +496,16 @@ background-color: #31D0AA;
 
 /* Overlayyyy */
 /* 00000000000 */
-/* {position: relative;
-  overflow: hidden;
-  
-}
-
 
 .overlay {
-
+  position: absolute;
+    top: 0;
+  left: 0;
   padding: 8px;
   background-color: var(--primary-brand);
   color: var(--footer-text);
   font-family: sans-serif;
-    position: absolute;
-    top: 0;
-  left: 0;
+  
   width: 100%;
   height: 100%;
 
@@ -494,7 +514,9 @@ background-color: #31D0AA;
 }
 
 
-:hover .overlay {transform: translateY(0);} */
+:hover .overlay {transform: translateY(0);}
+
+
 /* 000000000000000000 */
 
 .portfolio-btn {
@@ -513,6 +535,9 @@ background-color: #31D0AA;
   letter-spacing: 0.04em;
   border: 1px solid #e7e9fc;
   padding: 12px 24px;
+  transition-property: color, background-color, border, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-portfolio:focus,
@@ -533,3 +558,58 @@ background-color: #31D0AA;
 .portf-title {
   margin-bottom: 8px;
 }
+
+/* Modal styles */
+
+.backdrop {
+
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.40);
+}
+
+.backdrop.is-hidden{
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+top: 50%;
+left: 50%;
+transform: translateX(-50%) translateY(-50%);
+
+  width: 408px;
+height: 584px;
+background-color: #FCFCFC;
+border-radius: 4px;
+
+}
+
+.modal-button {
+  
+  position: absolute;
+  top: 24px;
+  right: 24px;
+ 
+width: 24px;
+height: 24px;
+
+  border-radius: 24px;
+border: 1px solid rgba(0, 0, 0, 0.10);
+background: var(--cornflower, #E7E9FC);
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+.modal-icon {
+ 
+}
+
+
+
