--- a/css/styles.css
+++ b/css/styles.css
@@ -463,6 +463,14 @@ background-color: #31D0AA;
   padding: 0;
 }
 
+.ftr-info {
+
+}
+
+.network-team-icon.ftr {
+
+  
+}
 
 
 /* Portfolio */
@@ -524,6 +532,18 @@ background-color: #31D0AA;
 
 
 .prtfl-wrapper:hover .overlay {transform: translateY(0);}
+
+.wrapper-text {
+width: 296px;
+height: 96px;
+  color: #F4F4FD;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  margin: 40px 32px 164px 32px;
+}
+
 
 
 /* 000000000000000000 */
