--- a/css/styles.css
+++ b/css/styles.css
@@ -432,9 +432,8 @@ button {
   color: #8e8f99;
   border-radius: 4px;
   border: 1px solid #8e8f99;
-  transition-property: border-color, fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 
 .clients-link:hover,
@@ -590,7 +589,7 @@ button {
   transform: translateY(100%); 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.wrapper-text:hover .portfolio-link {
+.portfolio-link:hover .wrapper-text {
   transform: translateY(0%);
 }
 
