--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 }
 
 input {
-	font-family: inherit;
+  font-family: inherit;
 }
 
 h1,
@@ -436,8 +436,8 @@ button {
   color: #8e8f99;
   border-radius: 4px;
   border: 1px solid #8e8f99;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -501,10 +501,9 @@ button {
 }
 
 .network-link.ftr:hover,
-.network-link.ftr:focus
- {background-color: #31D0AA;}
-
-
+.network-link.ftr:focus {
+  background-color: #31d0aa;
+}
 
 /* Portfolio */
 
@@ -521,28 +520,20 @@ button {
 }
 
 .portfolio-item {
- 
   width: calc((100% - 48px) / 3);
   flex-shrink: 0;
- 
 }
 
-
-.portfolio-link{
+.portfolio-link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
- 
-}  
-
+}
 
 .portfolio-link:hover {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    
 }
-
 
 /* Overlayyyy */
 /* 00000000000 */
@@ -557,23 +548,21 @@ button {
 
 .wrapper-text {
   position: absolute;
-  top: 0; 
-  
+  top: 0;
+
   color: var(--footer-text);
-  background-color: var(--primary-brand); 
+  background-color: var(--primary-brand);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-weight: 400;
-  
-  
+
   padding: 40px 32px;
-  height: 100%; 
-  width: 100%; 
-  transform: translateY(100%); 
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .overlay {
   position: absolute;
@@ -591,12 +580,9 @@ button {
   transition: transform 250ms ease-in-out;
 }
 
-
 .portfolio-link:hover .wrapper-text {
   transform: translateY(0%);
 }
-
-
 
 /* 000000000000000000 */
 
@@ -708,6 +694,81 @@ button {
 }
 
 .modal-icon {
-  color: #2E2F42;
+  color: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Form */
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  max-width: 408px;
+}
+
+.form-title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  margin: 72px 24px 0;
+}
+
+.form-button {
+  display: block;
+  margin: 0 auto;
+  color: var(--light-color);
+  background-color: var(--primary-brand);
+  min-width: 169px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+  padding: 16px 32px;
+  border: none;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover,
+.form-button:focus {
+  background-color: var(--action-color);
+}
+
+.form-input {
+  width: 360px;
+  height: 40px;
+
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.form-input.comment {
+  width: 360px;
+  height: 120px;
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  margin: 0 24px;
+  gap: 4px;
+  color: var(--lightslate, #8e8f99);
+
+  font-size: 12px;
+
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0.48px;
+}
+
+input {
+  font-family: inherit;
+  display: block;
+  width: 90%;
 }
