--- a/css/styles.css
+++ b/css/styles.css
@@ -745,10 +745,6 @@ button {
   border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
-.form-input.comment {
-  width: 360px;
-  height: 120px;
-}
 
 .form-label {
   display: flex;
@@ -760,7 +756,7 @@ button {
   font-size: 12px;
 
   font-style: normal;
-  font-weight: 400;
+  
   line-height: 14px;
   letter-spacing: 0.48px;
 }
@@ -769,4 +765,10 @@ input {
   font-family: inherit;
   display: block;
   width: 90%;
+  
+}
+
+textarea {
+
+  resize :none;
 }
