--- a/css/styles.css
+++ b/css/styles.css
@@ -697,23 +697,108 @@ button {
 }
 
 /* Form */
+
 .form {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  
 
   max-width: 408px;
+  padding: 72px 24px 24px;
 }
 
-.form-title {
+.modal-caption{
+  display: block;
   color: #2e2f42;
   text-align: center;
-  font-size: 16px;
+  
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.32px;
-  margin: 72px 24px 0;
+  margin-bottom: 16px;
+  
 }
+
+.form-label {
+  position: relative;
+  display: block;
+  
+  margin-bottom: 8px;
+  color: var(--lightslate, #8e8f99);
+
+  font-size: 12px;
+
+  font-style: normal;
+  
+  line-height: 14px;
+  letter-spacing: 0.48px;
+}
+
+.modal-form-label {
+  display: block;
+  margin-bottom: 4px;
+
+}
+
+.modal-form-input {
+  width: 360px;
+  
+  padding: 11px 38px;
+  font-size: 18px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+}
+.modal-form-input::placeholder {
+
+  color: rgba(46, 47, 66, 0.40);
+font-size: 12px;
+line-height: 14px;
+letter-spacing: 0.48px;
+}
+
+.modal-form-input:focus {
+
+  border-color: var(--primary-brand);
+}
+
+.modal-form-icon {
+position: absolute;
+bottom: 8px;
+left: 16px;
+  fill: #2E2F42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-icon.name {
+
+  position: absolute;
+  bottom: 11px;
+  left: 16px;
+  fill: #2E2F42;
+  
+}
+
+.modal-form-input:focus + .modal-form-icon {
+
+  fill: var(--primary-brand);
+}
+
+input {
+  font-family: inherit;
+  display: block;
+  width: 90%;
+  
+}
+
+textarea {
+
+  resize :none;
+
+}
+
 
 .form-button {
   display: block;
@@ -737,38 +822,3 @@ button {
   background-color: var(--action-color);
 }
 
-.form-input {
-  width: 360px;
-  height: 40px;
-
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-}
-
-
-.form-label {
-  display: flex;
-  flex-direction: column;
-  margin: 0 24px;
-  gap: 4px;
-  color: var(--lightslate, #8e8f99);
-
-  font-size: 12px;
-
-  font-style: normal;
-  
-  line-height: 14px;
-  letter-spacing: 0.48px;
-}
-
-input {
-  font-family: inherit;
-  display: block;
-  width: 90%;
-  
-}
-
-textarea {
-
-  resize :none;
-}
