--- a/css/styles.css
+++ b/css/styles.css
@@ -832,7 +832,10 @@ button {
   height: 120px;
   padding: 8px 16px;
   resize: none;
-  font-size: 18px;
+  font-size: 12px; 
+  line-height: 1.17; 
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   
   
   border-radius: 4px;
