--- a/css/styles.css
+++ b/css/styles.css
@@ -811,7 +811,9 @@ button {
   width: 100%;
   height: 40px;
   padding-left: 38px;
-  font-size: 18px;
+  font-size: 12px; 
+  line-height: 1.17; 
+  letter-spacing: 0.04em;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   background-color: transparent;
